--- a/registration-service/src/main/resources/application.yml
+++ b/registration-service/src/main/resources/application.yml
@@ -13,3 +13,23 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      registrationCircuitBreaker:
+        registerHealthIndicator: true
+        slidingWindowSize: 5
+        failureRateThreshold: 50
+        waitDurationInOpenState: 5s
+        permittedNumberOfCallsInHalfOpenState: 2
+  retry:
+    instances:
+      registrationRetry:
+        maxAttempts: 3
+        waitDuration: 2s
+  ratelimiter:
+    instances:
+      registrationRateLimiter:
+      limitForPeriod: 5
+      limitRefreshPeriod: 10s
