--- a/registration-service/src/main/resources/application.yml
+++ b/registration-service/src/main/resources/application.yml
@@ -7,12 +7,12 @@ spring:
   profiles:
     active: default
   config:
-    import: ${SPRING_CONFIG_IMPORT:http://localhost:8888}
+    import: ${SPRING_CONFIG_IMPORT:configserver:http://config-server:8888}
 
 eureka:
   client:
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka}
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://discovery-service:8761/eureka}
 
 resilience4j:
   circuitbreaker:
@@ -37,6 +37,3 @@ resilience4j:
 springdoc:
   api-docs:
     path: /registrations/v3/api-docs
-  swagger-ui:
-    url: /registrations/v3/api-docs
-  override-server-url: true
