corrigindo configuração do Circuit Breaker para ignorar exceções de negócio

--- a/registration-service/src/main/resources/application.yml
+++ b/registration-service/src/main/resources/application.yml
@@ -18,16 +18,15 @@ resilience4j:
   circuitbreaker:
     instances:
       registrationService:
-        registerHealthIndicator: true
         slidingWindowSize: 5
         failureRateThreshold: 50
         waitDurationInOpenState: 30s
         permittedNumberOfCallsInHalfOpenState: 2
       paymentService:
-        registerHealthIndicator: true
         slidingWindowSize: 5
         failureRateThreshold: 50
         waitDurationInOpenState: 30s
+        permittedNumberOfCallsInHalfOpenState: 2
   retry:
     instances:
       registrationRetry:
